Fixed Heating meter UI issues

--- a/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/CurrentPeriodAnalysisCard.razor
@@ -6,21 +6,28 @@
     <MudCardContent>
         <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
             <MudText Typo="Typo.h5">@_headerText</MudText>
-            <MudText Typo="Typo.caption">@TotalsSoFar.DateRangeText</MudText>
+            <MudText Typo="Typo.caption">@_rangeText</MudText>
         </MudPaper>
-        <MudText Class="ml-1" Typo="Typo.caption"><strong>To Date</strong></MudText>
-        <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
-            <MudChip  Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound" >@TotalsSoFar.PeriodCostPounds.eToMoneyFormat()</MudChip>
-            <MudChip  Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon" >@TotalsSoFar.PeriodConsumptionKWh kWh</MudChip>
-            <MudChip  Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica" >@TotalsSoFar.PeriodCo2 kgCO<sub>2</sub></MudChip>
-        </MudPaper>
-        <MudText Class="ml-1" Typo="Typo.caption"><strong>@Term.TermAdjective() Forecast</strong></MudText>
+
+        @if (Term != CalendarTerm.Day)
+        {
+            <MudText Class="ml-1" Typo="Typo.caption">
+                <strong>To Date</strong>
+            </MudText>
+            <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
+                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@TotalsSoFar.PeriodCostPounds.eToMoneyFormat()</MudChip>
+                <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@TotalsSoFar.PeriodCo2 kgCO<sub>2</sub></MudChip>
+            </MudPaper>
+        }
+        <MudText Class="ml-1" Typo="Typo.caption">
+            <strong>@Term.TermAdjective() Forecast</strong>
+        </MudText>
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound" >@TotalsForecast.ForecastCostPounds.eToMoneyFormat()</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon" >@TotalsForecast.ForecastConsumption kWh</MudChip>
-            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica" >@TotalsForecast.ForecastCo2 kgCO<sub>2</sub></MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.CurrencyPound">@TotalsForecast.ForecastCostPounds.eToMoneyFormat()</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@_consumptionIcon">@TotalsForecast.ForecastConsumption kWh</MudChip>
+            <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica">@TotalsForecast.ForecastCo2 kgCO<sub>2</sub></MudChip>
         </MudPaper>
 
         @if (PrimaryHeatSource)
@@ -28,7 +35,7 @@
             <MudDivider DividerType="DividerType.Middle"></MudDivider>
             <MudPaper Class="my-2 d-flex justify-center" Elevation="0">
 
-                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@TotalsForecast.TemperatureRange.TemperatureColourStyle">@TotalsForecast.TemperatureRange.TemperatureText</MudChip>
+                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@TotalsForecast.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
 
             </MudPaper>
         }
@@ -38,7 +45,7 @@
             <MudToggleIconButton Toggled="_highlightToggled"
                                  ToggledChanged="ToggleHighlight"
                                  Variant="Variant.Filled"
-                                 Icon="@Icons.Material.Filled.ZoomIn" Color="@Color.Secondary" 
+                                 Icon="@Icons.Material.Filled.ZoomIn" Color="@Color.Secondary"
                                  Title="Highlight"
                                  ToggledIcon="@Icons.Material.Filled.ZoomOut"
                                  ToggledColor="@Color.Tertiary" ToggledTitle="Highligted"/>
@@ -47,36 +54,49 @@
 </MudCard>
 
 @code {
-    [Parameter, EditorRequired] public bool PrimaryHeatSource { get; set; }
-    [Parameter, EditorRequired] public MeterType MeterType { get; set; }
-    [Parameter, EditorRequired] public CalendarTerm Term { get; set; }
 
-    [Parameter, EditorRequired] public HistoricalAnalysis TotalsSoFar { get; set; }
-    [Parameter, EditorRequired] public ForecastAnalysis TotalsForecast { get; set; }
+    [Parameter, EditorRequired]
+    public bool PrimaryHeatSource { get; set; }
 
-    [Inject] IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
+    [Parameter, EditorRequired]
+    public MeterType MeterType { get; set; }
+
+    [Parameter, EditorRequired]
+    public CalendarTerm Term { get; set; }
+
+    [Parameter, EditorRequired]
+    public HistoricalAnalysis TotalsSoFar { get; set; }
+
+    [Parameter, EditorRequired]
+    public ForecastAnalysis TotalsForecast { get; set; }
+
+    [Inject]
+    IState<AnalysisOptionsState> AnalysisOptionsState { get; set; }
+
     AnalysisOptionsActionFactory _analysisOptionsActionFactory;
 
     string _consumptionIcon = Icons.Material.Filled.ElectricBolt;
     string _headerText;
-
+    private string _rangeText;
+    private string _temperatureText;
+    
     private bool _highlightToggled;
 
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
 
-        _analysisOptionsActionFactory= new AnalysisOptionsActionFactory(MeterType);
+        _analysisOptionsActionFactory = new AnalysisOptionsActionFactory(MeterType);
         _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Current, TotalsSoFar.Start);
+        _rangeText = Term.AnalysisPeriodHeader(RelativePeriod.Current, TotalsSoFar.Start);
+        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Current, TotalsForecast.TemperatureRange);
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
 
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Current;
-
     }
 
     private async Task ToggleHighlight(bool toggled)
     {
-
         if (toggled)
         {
             var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Current, TotalsSoFar.Start, TotalsForecast.End);
@@ -89,7 +109,6 @@
         }
 
         _highlightToggled = toggled;
-
     }
 
 }
