--- a/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
+++ b/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
@@ -147,6 +147,7 @@ else
                     action =>
                     {
                         _calenderTerm = action.CalendarTerm;
+                        SetHistoricalAnalyses();
                         SetForecastAnalyses();
                     });
                 break;
@@ -160,6 +161,7 @@ else
                     action =>
                     {
                         _calenderTerm = action.CalendarTerm;
+                        SetHistoricalAnalyses();
                         SetForecastAnalyses();
                     });
                 break;
