--- a/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/ForecastCard.razor
@@ -6,7 +6,7 @@
     <MudCardContent>
         <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
             <MudText Typo="Typo.h5">@_headerText</MudText>
-            <MudText Typo="Typo.caption">@ForecastAnalysis.DateText</MudText>
+            <MudText Typo="Typo.caption">@_rangeText</MudText>
         </MudPaper>
 
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
@@ -16,12 +16,12 @@
             <MudChip Style="pointer-events: none; background-color: transparent;" Icon="@Icons.Material.Filled.SouthAmerica" >@ForecastAnalysis.ForecastCo2 kgCO<sub>2</sub></MudChip>
 
         </MudPaper>
-        <MudDivider DividerType="DividerType.Middle"></MudDivider>
+        <MudDivider  DividerType="DividerType.Middle"></MudDivider>
         @if (PrimaryHeatSource)
         {
             <MudPaper Class="my-2 d-flex justify-center" Elevation="0">
 
-                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@ForecastAnalysis.TemperatureRange.TemperatureColourStyle">@ForecastAnalysis.TemperatureRange.TemperatureText</MudChip>
+                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@ForecastAnalysis.TemperatureRange.TemperatureColourStyle">@_temperatureText</MudChip>
 
             </MudPaper>
             <MudDivider DividerType="DividerType.Middle"></MudDivider>
@@ -54,6 +54,8 @@
     string _headerText;
 
     bool _highlightToggled;
+    private string _rangeText;
+    private string _temperatureText;
 
     protected override void OnParametersSet()
     {
@@ -62,7 +64,10 @@
         _analysisOptionsActionFactory = new AnalysisOptionsActionFactory(MeterType);
 
         _headerText = Term.AnalysisPeriodHeader(RelativePeriod.Next, ForecastAnalysis.Start);
-
+        
+        _rangeText = Term.AnalysisPeriodDateRangeText(RelativePeriod.Next, ForecastAnalysis.Start, ForecastAnalysis.End);
+        _temperatureText = Term.AnalysisPeriodTemperatureText(RelativePeriod.Next, ForecastAnalysis.TemperatureRange);
+        
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
 
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Forecast;
