--- a/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
@@ -8,7 +8,7 @@
         <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
             <MudText Typo="Typo.h5">@_headerText</MudText>
 
-            <MudText Typo="Typo.caption">@DurationAnalysis.DateRangeText</MudText>
+            <MudText Typo="Typo.caption">@_rangeText</MudText>
         </MudPaper>
         <MudPaper Class="d-flex justify-start flex-wrap" Elevation="0">
 
@@ -27,14 +27,8 @@
             </MudPaper>
         }
         <MudDivider DividerType="DividerType.Middle"></MudDivider>
-        <MudDivider DividerType="DividerType.Middle"></MudDivider>
-
-        <MudDivider DividerType="DividerType.Middle"></MudDivider>
-        <MudDivider DividerType="DividerType.Middle"></MudDivider>
-
 
         <MudCardActions Class="d-flex justify-center">
-                <MudChip Icon="@Icons.Material.Filled.Thermostat" Color="Color.Transparent" Style="@DurationAnalysis.TemperatureRange.TemperatureColourStyle">@DurationAnalysis.TemperatureRange.TemperatureText</MudChip>
             
             <MudToggleIconButton Toggled="_highlightToggled"
                                  ToggledChanged="ToggleHighlight"
@@ -65,6 +59,8 @@
     string _consumptionIcon = Icons.Material.Filled.ElectricBolt;
     string _headerText;
     bool _highlightToggled;
+    private string _rangeText;
+    private string _temperatureText;
 
 
     protected override void OnParametersSet()
@@ -74,6 +70,9 @@
         _analysisOptionsActionFactory = new AnalysisOptionsActionFactory(MeterType);
 
         _headerText = Term.AnalysisPeriodHeader(Period, DurationAnalysis.Start);
+        _rangeText = Term.AnalysisPeriodDateRangeText(Period, DurationAnalysis.Start, DurationAnalysis.End);
+        _temperatureText = Term.AnalysisPeriodTemperatureText(Period, DurationAnalysis.TemperatureRange);
+        
         _consumptionIcon = MeterType == MeterType.Electricity ? Icons.Material.Filled.ElectricBolt : Icons.Material.Filled.LocalFireDepartment;
         _highlightToggled = AnalysisOptionsState.Value[MeterType].ToggleSource == ToggleSource.Historical;
 
@@ -83,7 +82,7 @@
     {
         if (toggled)
         {
-            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, DurationAnalysis.Start, DurationAnalysis.End);
+            var setHighlightAction = _analysisOptionsActionFactory.Create(AnalysisAction.SetHighlightRange, ToggleSource.Historical, DurationAnalysis.Start, DurationAnalysis.End);
             Dispatcher.Dispatch(setHighlightAction);
         }
         else
