--- a/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
+++ b/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
@@ -191,9 +191,9 @@
         }
 
         var latestReading = WeatherState.Value.WeatherReadings.FindLast(c => c.IsRecentForecast)?.
-            UtcReadDate;
+            UtcTime;
         var latestHistoricalReading = WeatherState.Value.WeatherReadings.FindLast(c => c.IsHistorical)?.
-            UtcReadDate;
+            UtcTime;
 
         if (latestReading < DateTime.UtcNow.Date.AddDays(-1))
         {
