--- a/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyTemperatureChart.razor
@@ -68,22 +68,27 @@
     {
         if (firstRender)
         {
-            List<ChartReading> chartReadings = MeterType switch
+            var costedReadings = MeterType switch
             {
-                MeterType.Gas => GasReadingsState.Value.CostedReadings.Select(Mapping.MapToChartReading).
-                    ToList(),
-                MeterType.Electricity => ElectricityReadingsState.Value.CostedReadings.Select(Mapping.MapToChartReading).
-                    ToList(),
+                MeterType.Gas => GasReadingsState.Value.CostedReadings,
+                MeterType.Electricity => ElectricityReadingsState.Value.CostedReadings,
                 _ => throw new ArgumentOutOfRangeException()
             };
 
-            var latestReading = chartReadings.Last().DateTicks;
+            var chartReadings = costedReadings.Select(Mapping.MapToChartReading).ToList();
+
+            var latestReading = costedReadings.Last();
+            var firstReading = costedReadings.First();
+            
+            var firstReadingTicks = firstReading.UtcTime.eToUnixTicksNoOffset();
+            var latestReadingTicks = chartReadings.Last().DateTicks;
+
 
             var temperatureIconPoints = WeatherState.Value.WeatherReadings
-                .Where(c => c.UtcTime.Ticks > latestReading)
+                .Where(c => c.UtcTime.eToUnixTicksNoOffset() >= firstReadingTicks)
                 .Select(c => new TemperatureIconPoint()
                 {
-                    DateTicks = c.UtcTime.Ticks,
+                    DateTicks = c.UtcTime.eToUnixTicksNoOffset(),
                     TemperatureCelsius = c.TemperatureAverage,
                     TemperatureCelsiusUnmodified = c.TemperatureAverage,
                     Summary = c.Summary ?? string.Empty,
@@ -93,11 +98,13 @@
 
             var meterChartProfile = new MeterChartProfile()
                 {
+                    ShowCost = AnalysisOptions.Value[MeterType].ShowCost,
                     GlobalId = MeterGlobalId,
-                    LatestReading = latestReading,
-                    MostRecentWeekStart = latestReading,
+                    LatestReading = latestReadingTicks,
+                    MostRecentWeekStart = latestReadingTicks,
                     ProfileStart = chartReadings.First().DateTicks,
-                    ProfileEnd = latestReading,
+                    OneMonthInTheFuture = latestReading.UtcTime.eToUnixTicksNoOffset(),
+                    ProfileEnd = latestReadingTicks,
                     ChartReadings = chartReadings,
                 };
             
@@ -114,10 +121,8 @@
             return;
         }
 
-        long startTicks = start.eToUnixTime();
-        long endTicks = end.AddDays(1).
-            AddMilliseconds(-1).
-            eToUnixTime();
+        long startTicks = start.eToUnixTicksNoOffset();
+        long endTicks = end.eToUnixTicksNoOffset();
 
 
         await JsRuntime.InvokeVoidAsync(
