--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -25,3 +25,11 @@
 @using MathNet.Numerics
 @using Energy.App.Standalone.Features.Analysis.Store;
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis.Models;
+@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Models
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store
+@using Energy.App.Standalone.Features.EnergyReadings.Gas.Actions
+@using Energy.App.Standalone.Features.EnergyReadings.Gas
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Actions
+@using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
+@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Interfaces;
