--- a/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
+++ b/Energy.App.Standalone/Features/Analysis/PrimaryHeatSourceSummary.razor
@@ -1,10 +1,7 @@
-﻿@using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
-@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Interfaces;
-@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Models;
-@using Energy.App.Standalone.Features.EnergyReadings.Store;
-@using System.Collections.Immutable;
+﻿@using System.Collections.Immutable;
 @using Energy.App.Standalone.Features.AppInit.Store.OldAppInit
 @using Energy.App.Standalone.Features.Setup.Store.ImmutatableStateObjects;
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
 @inherits FluxorComponent
 @inject IDispatcher Dispatcher
 
