--- a/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
+++ b/Energy.App.Standalone/Features/AppInit/AppInitializeLoaders.razor
@@ -1,5 +1,7 @@
-﻿@using Energy.App.Standalone.Features.AppInit.Store
-@using Energy.App.Standalone.Features.EnergyReadings.Store
+﻿@using Energy.App.Standalone.Features.AppInit.Store.OldAppInit
+@using Energy.App.Standalone.Features.AppInit.Store
+@using Energy.App.Standalone.Features.EnergyReadings.Electricity.Store;
+@using Energy.App.Standalone.Features.EnergyReadings.Gas;
 @using Microsoft.Extensions.FileSystemGlobbing.Abstractions
 @inherits FluxorComponent
 @inject IDispatcher Dispatcher
@@ -11,13 +13,13 @@
         </MudCardHeader>
         <MudCardContent Class="d-flex flex-column gap-3">
 
-            @if (!AppInitState.Value.AppStarted)
+            @if (!AppInit.AppStarted)
             {
                 <MudAlert Severity="@Severity.Info" Elevation="2" Dense="@true">App starting...</MudAlert>
                 <MudProgressLinear Size="Size.Large" Color="Color.Primary" Indeterminate="true"></MudProgressLinear>
             }
 
-            @if (AppInitState.Value.AppStarted)
+            @if (AppInit.AppStarted)
             {
                 @if (CanUpdateWeatherData)
                 {
@@ -70,22 +72,6 @@
                     <MudAlert Severity="@Severity.Info" Elevation="2" Dense="@true">Setup your Gas Meter for consumption analysis</MudAlert>
                 }
 
-                @if (CanUpdateLinearCoefficients)
-                {
-                    @if (LinearCoefficientsLoading)
-                    {
-                        <MudAlert Severity="@Severity.Info" Elevation="2" Dense="@true">Calculating weather/consumption relationship...</MudAlert>
-                        <MudProgressLinear Size="Size.Large" Color="Color.Success" Indeterminate="true"></MudProgressLinear>
-                    }
-                    else
-                    {
-                        <MudAlert Severity="@Severity.Success" Elevation="2" Dense="@true">Weather/consumption relationship calculated</MudAlert>
-                    }
-                }
-                else
-                {
-                    <MudAlert Severity="@Severity.Info" Elevation="2" Dense="@true">Setup your Heating Meter to see how weather changes affect your energy costs</MudAlert>
-                }
             }
 
         </MudCardContent>
@@ -98,6 +84,9 @@
 @code {
 
     int _loadingProgress = 0;
+
+    [Inject]
+    private AppInit AppInit { get; set; }
 
     [Inject]
     private IState<AppInitState> AppInitState { get; set; }
@@ -118,59 +107,33 @@
     IState<ElectricityReadingsState> ElectricityReadingsState { get; set; }
 
     [Inject]
-    IState<LinearCoefficientsState> LinearCoefficientsState { get; set; }
+    IState<HeatingForecastState> LinearCoefficientsState { get; set; }
 
-    bool CanUpdateWeatherData => HouseholdState.Value.Saved;
-    bool CanUpdateElectricityData => MeterSetupState.Value.ElectricityMeter.SetupValid;
-    bool CanUpdateGasData => MeterSetupState.Value.GasMeter.SetupValid;
+    bool CanUpdateWeatherData => AppInit.HouseholdSetupValid;
+    bool CanUpdateElectricityData => AppInit.ElectricityMeterSetupValid;
+    bool CanUpdateGasData => AppInit.GasMeterSetupValid;
 
-    bool CanUpdateLinearCoefficients => MeterSetupState.Value[HouseholdState.Value.PrimaryHeatSource].
-        SetupValid;
 
-    bool WeatherDataLoading => WeatherState.Value.Loading || WeatherState.Value.Updating;
-    bool ElectricityDataLoading => ElectricityReadingsState.Value.ReloadingReadings || ElectricityReadingsState.Value.UpdatingReadings || ElectricityReadingsState.Value.CalculatingCosts;
-    bool GasDataLoading => GasReadingsState.Value.Reloading || GasReadingsState.Value.Updating || GasReadingsState.Value.CalculatingCosts;
+    bool WeatherDataLoading => AppInit.WeatherDataLoading;
+    bool ElectricityDataLoading => AppInit.ElectricityDataLoading;
+    bool GasDataLoading => AppInit.GasDataLoading;
 
-    bool LinearCoefficientsLoading => !LinearCoefficientsState.Value.Saved;
 
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        SubscribeToAction<InitializeAppAction>(_ => LoadAll());
     }
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            await Task.Delay(1000);
-            Console.WriteLine(nameof(OnAfterRender));
+    //protected override async Task OnAfterRenderAsync(bool firstRender)
+    //{
+    //    if (firstRender)
+    //    {
+    //        await Task.Delay(1000);
+    //        Console.WriteLine(nameof(OnAfterRender));
 
-            Dispatcher.Dispatch(new InitializeAppAction());
-        }
-    }
-
-    private void LoadAll()
-    {
-        if (CanUpdateWeatherData)
-        {
-            InitializeWeather();
-        }
-
-        if (CanUpdateElectricityData)
-        {
-            InitializeElectricity();
-        }
-
-        if (CanUpdateGasData)
-        {
-            InitializeGas();
-        }
-        if (CanUpdateLinearCoefficients)
-        {
-            InitializeLinearCoefficients();
-        }
-    }
+    //        Dispatcher.Dispatch(new InitializeAppAction());
+    //    }
+    //}
 
     private async Task WorkItem()
     {
@@ -182,69 +145,5 @@
         await Task.Delay(1);
     }
 
-    private void InitializeWeather()
-    {
-        if (!WeatherState.Value.WeatherReadings.Any())
-        {
-            Dispatcher.Dispatch(new InitiateWeatherReloadReadingsAction(HouseholdState.Value.OutCodeCharacters));
-            return;
-        }
-
-        var latestReading = WeatherState.Value.WeatherReadings.FindLast(c => c.IsRecentForecast)?.
-            UtcTime;
-        var latestHistoricalReading = WeatherState.Value.WeatherReadings.FindLast(c => c.IsHistorical)?.
-            UtcTime;
-
-        if (latestReading < DateTime.UtcNow.Date.AddDays(-1))
-        {
-            Dispatcher.Dispatch(new InitiateWeatherUpdateReadingsAction(HouseholdState.Value.OutCodeCharacters,
-                latestReading,
-                latestHistoricalReading));
-            return;
-        }
-    }
-
-    private void InitializeGas()
-    {
-        if (GasReadingsState.Value.BasicReadings.Any())
-        {
-            DateTime lastReading = GasReadingsState.Value.BasicReadings.Last().
-                UtcTime;
-            if (lastReading < DateTime.Today.AddDays(-1))
-            {
-                Dispatcher.Dispatch(new GasUpdateReadingsAction(lastReading.Date));
-            }
-        }
-        else
-        {
-            Dispatcher.Dispatch(new GasReloadReadingsAction());
-        }
-
-        Dispatcher.Dispatch(new GasInitiateCostCalculationsAction());
-    }
-
-    private void InitializeElectricity()
-    {
-        if (ElectricityReadingsState.Value.BasicReadings.Any())
-        {
-            DateTime lastReading = ElectricityReadingsState.Value.BasicReadings.Last().
-                UtcTime;
-            if (lastReading < DateTime.Today.AddDays(-1))
-            {
-                Dispatcher.Dispatch(new ElectricityUpdateReadingsAction(lastReading.Date));
-            }
-        }
-        else
-        {
-            Dispatcher.Dispatch(new ElectricityReloadReadingsAction());
-        }
-
-        Dispatcher.Dispatch(new ElectricityInitiateCostCalculationsAction());
-    }
-
-    private void InitializeLinearCoefficients()
-    {
-        Dispatcher.Dispatch(new InitiateUpdateLinearCoefficientsAction());
-    }
 
 }
